2010-01-21  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* audio.cpp: Call Underflowed if we detect that we won't get any data
	at all.

	* audio-pulse.cpp: OnWrite: recheck if we've been stopped after calling
	Write.

2010-01-19  Alan McGovern  <amcgovern@novell.com>

	* dependencyobject.cpp: Calling DO.ClearValue should follow
	  the same parenting/unparenting behaviour as DO.SetValue,
	  i.e. if the property is custom we don't remove the parent.
	  Fixes #567278

2010-01-19  Alan McGovern  <amcgovern@novell.com>

	* uielement.h:
	* uielement.cpp: The only time that PENDING_LOADED is set, we
	  unset it in the very next function call. It's useless with
	  the current code, so I'm removing it.

2010-01-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* uielement.cpp|h: We need to clear the WaitingForLoaded flag
	up the visual tree when an element is added too.

	Fixes #571823.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: Don't propagate DownloadProgressChanged events if we're
	not the current playlist entry.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp|h: Added a way to get the number of pending read
	requests for a ProgressiveSource.

	* pal/gtk/debug-ui.cpp: More information and fixes to the media element
	dialog.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* playlist.cpp: Playlist::PlayNext: don't fetch the element before we
	actually need it. Makes a sanity warning go away.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pal/gtk/debug-ui.cpp: Add a copy button to the media element view to
	copy all text to the clipboard.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* mms-downloader.cpp:
	* pipeline-asf.cpp|h: Fix looping ranges to [1-127] for
	MmsPlaylistEntry::GetSelectedStream arguments.

2010-01-16  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline-asf.cpp: Add debug information for server problems to filter
	those out more easily.
